# NaN-OS

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  rebrand.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
READMES/: README.ar.md  README.bn.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.vi.md  README.zh.md
agent/: package.json  pnpm-lock.yaml
docs/: 2026-03-02-rsync-exit-code-23-install-fix.md  2026-03-03-gen-grub-cfgstub-bootloader-fix.md  ai-native-opensource-operations-report.md  diagnosis-2026-02-28-korean-input-and-openclaw.md  flathub-submission-guide.md
flatpak/: com.cafelua.shell.desktop  com.cafelua.shell.metainfo.xml  com.cafelua.shell.yml  io.nextain.naia.desktop  io.nextain.naia.metainfo.xml  io.nextain.naia.yml  io.nextain.nan.desktop  io.nextain.nan.metainfo.xml  io.nextain.nan.yml
gateway/: package.json
installer/: flatpaks  hook-post-rootfs.sh
os/: recipe.yml
recipes/: recipe.yml
scripts/: flatpak-rebuild-and-run.sh  flatpak-reinstall-and-run.sh  flatpak-run.sh  install-gateway.sh  itch-upload.sh  local-reinstall-run-naia-flatpak.sh
shell/: .env.sample  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
shell/src-tauri/: Cargo.toml  tauri.conf.flatpak.json  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/src/: audit.rs  lib.rs  main.rs  memory.rs
work-logs/: 20260215-01-bluebuild-pipeline-setup.md  (+26 more)
(+372 files in other folders)
