[package]
name = "cafelua-shell"
version = "0.1.0"
description = "Cafelua Shell - AI Avatar Desktop"
authors = ["Luke"]
edition = "2021"

[lib]
name = "cafelua_shell_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
